solving security layer